# sarm-hand

./: .gitignore  README.md  cheatsheet.md  pyproject.toml
config/: default.yaml
config/scenes/: minimal.yaml  pick_place_desk.yaml
docker/genesis/: Dockerfile  compose.yaml
docs/: leader_sim_alignment.md
scripts/: fetch_so101_assets.sh  test_genesis_pickup.py
sim/: arm3d.html
sim/css/: arm3d.css  labels.css
sim/js/: angles.js  api.js  arm-update.js  bootstrap.js  cal-lab.js  config.js  constants.js  kinematics.js  main.js  (+6 more)
tests/: test_act_inference_blend.py  test_act_learning_rate.py  test_act_policy.py  test_calibration_bridge.py  test_camera_fail_on_error.py  test_camera_probe.py  test_camera_test_together.py  test_cameras_downscale.py  test_cameras_resilient.py  test_connect_failure_help.py  test_dataset_demo_start.py  test_dataset_paths.py  test_dataset_subsample.py  test_ensure_bus_calibration.py  test_esp32_udp_stream.py  test_genesis_calibration.py  test_genesis_delta_mapping.py  test_genesis_grasp.py  test_genesis_grasp_log.py  test_genesis_home_pose.py  test_genesis_joint_mapping.py  test_genesis_leader_calib.py  test_genesis_leader_wiring.py  test_genesis_mirror.py  test_genesis_pickup.py  test_genesis_preview.py  test_genesis_shutdown.py  test_genesis_support.py  test_genesis_units.py  test_genesis_wide_cal_mapping.py  test_joint_signal_log.py  test_keyboard_control.py  test_policy_checkpoint.py  test_policy_device.py  test_policy_genesis.py  test_record_paths.py  test_recording_ui.py  test_rerun_viz.py  test_rest_pose.py  test_scene_loader.py  (+6 more)
(+53 files in other folders)
